[package]
name = "concurrency"
version = "0.1.0"
authors = ["Daniel Busaba <DanielBusaba99@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
rayon = "*"
faster = { git = "https://github.com/AdamNiederer/faster.git", branch = "master"}
num_cpus = "*"
